<resources>



    <string name="app_name">HOW WELL DO YOU KNOW SATU?</string>
    <string name="correct"><b>CORRECT ANSWERS IS</b> \n
                           <b>%1$d</b> OUT OF 6</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="correct_answer">That\'s correct</string>
    <string name="wrong_answer">That\'s incorrect</string>
    <string name="a">Satu loves Chocolates.</string>
    <string name="b">Satu Knows Following Skills:\n \t
                     <b>Ballet</b></string>
    <string name="c">Do You Think Satu Has a:\n \t
                     <b>Pet</b></string>
    <string name="d">Do You Think Satu Wants To Visit <b>Italy</b></string>
    <string name="e">Satu Loves Summer.</string>
    <string name="f">Satu Loves Cats.</string>
    <string name="next_text">next</string>
    <string name="prev_text">previous</string>
</resources>