<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FF018786"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/myimage"
        android:layout_width="290dp"
        android:layout_height="224dp"
        android:src="@drawable/suklaa" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="357dp"
        android:layout_height="65dp"
        android:padding="10dp"
        android:text="@string/a"
        android:textColor="@android:color/black"
        android:textSize="14sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:backgroundTint="#5BD91B"
            android:text="@string/true_text"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />


        <Button
            android:id="@+id/false_button"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:backgroundTint="#E33328"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/false_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="#DFD2D1"
            android:scaleType="fitCenter"
            android:src="@drawable/edellinen"
            android:text="@string/app_name" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="#DFD2D1"
            android:scaleType="fitCenter"
            android:src="@drawable/seuraava"
            android:text="@string/next_text" />

    </LinearLayout>

</LinearLayout>